# immich-avif-generator

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
src/: config.rs  main.rs
src/converter/: avif.rs  mod.rs
src/db/: mod.rs  models.rs
src/immich/: auth.rs  client.rs  mod.rs  types.rs
src/server/: mod.rs  routes.rs
src/sync/: incremental.rs  mod.rs
