[package]
name = "avif-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
image = "0.24"
ravif = "0.11"
rgb = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
oauth2 = { version = "4", features = ["reqwest"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
